Fixed animation on mobile and tablet version

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -512,7 +512,6 @@ p{
     display: flex;
     justify-content: center;
 
-
     background-color: #2c2933;
 
     .display{
@@ -557,10 +556,15 @@ p{
     #section-art-display{
         .display{
             grid-template-columns: repeat(1, 1fr);
+            justify-items: center;
+            gap: 50px;
 
+            width: 100%;
             .art{
-                width: 450px;
+                width: 80%;
                 height: 300px;
+
+                visibility: visible;
             }
         }
     }
@@ -569,7 +573,7 @@ p{
     #section-art-display{
         .display{
             .art{
-                width: 220px;
+                width: 100%;
                 height: 200px;
             }
         }
